[package]
name = "tftp"
description = "A package with TFTP protocol definition"
repository = "https://github.com/ivan770/tftp"

version = "0.1.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
license = "MIT"

edition = "2018"

[features]
default = ["alloc", "ascii/std", "displaydoc/std"]
alloc = []

[dependencies]
ascii = { version = "1", default-features = false }
enumn = "0.1"
displaydoc = { version = "0.2", default-features = false }

[dev-dependencies]
expect-test = "1"